<!--Adrian Portal Calcines n01489363 0CA
    Alfred Dowuona <N01490404> 0CA
    Ali Mohebi <N01477361> <0CB>
    Hassan Noorani <n01485518> 0CB -->
<resources>
    <string name="app_name">CaveExaminationBot</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="botName">Cave Examination Bot</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="caveexplorationbot">CaveExplorationBot</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_message" translatable="false">Welcome to our app!</string>
    <string name="todo">TODO</string>
    <string name="location">Location\n</string>
    <string name="TBD" translatable="false">TBD</string>
    <string name="feedback">Feedback</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="name">Name</string>
    <string name="comment">Comment</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="feedbackTitle">FeedBack</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="create_account">create_account</string>
    <string name="forgot_password">forgot_password</string>
    <string name="createaccount">Create Account</string>
    <string name="forgotpassword">Forgot Password</string>
    <string name="submit">Submit</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="back_to_login">Back to login</string>
    <string name="current_user">Current user:</string>
    <string name="about_us">About Us</string>
    <string name="logged_in_as">Logged in as:</string>
    <string name="team_name_teambot_nproject_name_caveexaminationbot">Team Name: TeamBot\nProject Name: CaveExaminationBot</string>
    <string name="about_the_project">About the project:</string>
    <string name="space">"  "</string>
    <string name="default_web_client_id">79905121764-qebfg6o770jqolo2ovqrg6pgrv009ord.apps.googleusercontent.com</string>
    <string name="error">"Error: "</string>
    <string name="could_not_sign_you_in">Could not sign you in!</string>
    <string name="my_map_api_key">AIzaSyBJWsD3o3CtiXTSUu4faHRq6wzLoz2xOKc</string>
    <string name="exit_app">Exit App</string>
    <string name="are_you_sure_you_want_to_exit_the_app">Are you sure you want to exit the app?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="s_s_s">%s%s%s</string>
    <string name="a_za_z0_9_a_za_z0_9_a_za_z_2">^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,}$</string>
    <string name="email_must_follow_correct_format">Email must follow correct format!</string>
    <string name="this_field_cannot_be_empty">This field cannot be empty!</string>
    <string name="this_field_must_have_exactly_10_numbers_and_no_alphabetic_characters">This field must have exactly 10 numbers and no alphabetic characters</string>
    <string name="this_field_must_have_at_least_3_chars_and_no_numeric">\"This field must have at least 3 chars and no numeric\"</string>
    <string name="_0_9_10">^[0-9]{10}$</string>
    <string name="a_za_z">[a-zA-Z]+</string>
    <string name="firstname">firstname</string>
    <string name="phonemodel">phonemodel</string>
    <string name="ratingbar">ratingbar</string>
    <string name="feedback_submitted_thank_you">Feedback Submitted, Thank you!</string>
    <string name="ontario">Ontario</string>
    <string name="login_successful">Login Successful!</string>
    <string name="login_failed">Login Failed.</string>
    <string name="loginprefs">LoginPrefs</string>
    <string name="isloggedin">isLoggedIn</string>
    <string name="account_creation_failed">Account Creation failed!</string>
    <string name="account_created">Account Created!</string>
    <string name="id">id</string>
    <string name="profile">profile</string>
    <string name="users">users</string>
    <string name="permission_granted">Permission granted.</string>
    <string name="permission_was_not_granted">Permission was not granted.</string>
    <string name="https_www_google_ca">https://www.google.ca</string>
    <string name="stay">Stay</string>
    <string name="exit">Exit</string>
    <string name="do_you_want_to_exit_the_app">Do you want to exit the app?</string>
    <string name="exit_confirmation">Exit Confirmation</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="user">User</string>
    <string name="the_passwords_do_not_match">The passwords do not match!</string>
    <string name="change_picture">Change picture</string>
    <string name="switch_theme">Switch Theme</string>
    <string name="generate_test_data">Generate test data</string>
    <string name="fetching_data">Fetching data</string>
    <string name="gas_level">"\n\nGas Level: "</string>
    <string name="time">"Time: "</string>
    <string name="_3f">%.3f</string>
    <string name="s_s_air_pressure_s_temperature_s_humidity_s_s_s_magnetic_field_s_cave_integrity_s">%s%s\n\nAir Pressure: %s\n\nTemperature: %s\n\nHumidity: %s%s%s\n\nMagnetic Field: %s\n\nCave Integrity: %s</string>
    <string name="a_z_a_z_d_a_za_z_d_6"><![CDATA[^(?=.*[A-Z])(?=.*[a-z])(?=.*\\d)(?=.*[@$!%*?&])[A-Za-z\\d@$!%*?&]{6,}$]]></string>
    <string name="password_must_follow_correct_format">Password must follow correct format!</string>
    <string name="feedback_submission">Feedback submission</string>
    <string name="your_feedback_was_successful">Your feedback was successful!</string>
    <string name="ok">OK</string>
    <string name="message" />
    <string name="Email" />
    <string name="done" />
    <string name="Message" />
    <string name="display_next">Display Next</string>
    <string name="dashboard">Dashboard</string>
    <string name="settings">Settings</string>
    <string name="robot_control">Robot Control</string>
    <string name="data_reading">Data Reading</string>
    <string name="local_data_review">Local Data review</string>
    <string name="temperature">Temperature</string>
    <string name="_1f">%.1f</string>
    <string name="c">°C</string>
    <string name="humidity">Humidity</string>
    <string name="percentage">%</string>
    <string name="_1">%.1</string>
    <string name="cave_integrity">Cave integrity</string>
    />
</resources>