<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">


    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="32dp"
        android:text="@string/dashboard"
        android:textSize="35sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSettings"
        android:layout_width="125sp"
        android:layout_height="125sp"
        android:layout_marginStart="212dp"
        android:layout_marginTop="284dp"
        android:text="@string/settings"
        android:backgroundTint="#3E424B"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRobotControl"
        android:layout_width="125sp"
        android:layout_height="125sp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="284dp"
        android:text="@string/robot_control"
        android:backgroundTint="#3E424B"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnDataReading"
        android:layout_width="125sp"
        android:layout_height="125sp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="156dp"
        android:text="@string/data_reading"
        android:backgroundTint="#3E424B"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRandom"
        android:layout_width="125sp"
        android:layout_height="125sp"
        android:layout_marginStart="212dp"
        android:layout_marginTop="156dp"
        android:text="@string/local_data_review"
        android:backgroundTint="#3E424B"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>



