<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#33333d"
    tools:context=".LoginActivity">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginTop="500dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/common_google_signin_btn_text_light_normal" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="172dp"
        android:background="@drawable/custom_textview"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="348dp"
        android:text="Remember me"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="176dp"
        android:layout_marginTop="428dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:focusable="false"
        android:includeFontPadding="false"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:text="@string/submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/create_account"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="584dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:focusable="false"
        android:includeFontPadding="false"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:text="@string/createaccount"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="632dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:focusable="false"
        android:includeFontPadding="false"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:text="@string/forgotpassword"
        android:textColor="#FFFFFF"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="244dp"
        android:text="@string/password"
        android:textColor="#949494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginTop="72dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="272dp"
        android:background="@drawable/custom_textview"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="148dp"
        android:text="@string/email"
        android:textColor="#949494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>