<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#33333d"
    tools:context=".RegisterActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="181dp"
        android:layout_marginTop="667dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="164dp"
        android:layout_marginTop="608dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:focusable="false"
        android:includeFontPadding="false"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:text="@string/register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Backbutton"
        android:layout_width="124dp"
        android:layout_height="48dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:focusable="false"
        android:includeFontPadding="false"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:text="@string/back_to_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="44dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="436dp"
        android:background="@drawable/custom_textview"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="536dp"
        android:background="@drawable/custom_textview"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="248dp"
        android:background="@drawable/custom_textview"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextName"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="148dp"
        android:background="@drawable/custom_textview"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="340dp"
        android:background="@drawable/custom_textview"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="116dp"
        android:text="@string/name"
        android:textColor="#949494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/phoneTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="220dp"
        android:text="@string/phone"
        android:textColor="#949494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="316dp"
        android:text="@string/email"
        android:textColor="#949494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="408dp"
        android:text="@string/password"
        android:textColor="#949494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="508dp"
        android:text="@string/confirm_password"
        android:textColor="#949494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>